Changelog
=========


1.5.0 (unreleased)
------------------

- Plone 5 support: default content builders are switched to the dexterity implementation
  by default for Plone >= 5.
  The builder classes were moved from ``archetypes`` module to ``content`` module.
  [jone]


1.4.0 (2014-09-04)
------------------

- Implement collection builder.
  [jone]

- Fixed default value setter for different "owners" field.
  [phgross]


1.3.4 (2014-08-29)
------------------

- DxBuilder: Fix encoding problem when filling default value for "owners" field.
  [jone]


1.3.3 (2014-06-05)
------------------

- DxBuilder: Fix check if field is present (to determine if default values should be set).
  [lgraf]

- DxBuilder: Make sure default values are set before adding content to container.
  [lgraf]


1.3.2 (2014-05-29)
------------------

- Update object_provides in catalog when using provides().
  [jone]


1.3.1 (2014-03-26)
------------------

- Provide a real image (1x1 px GIF) for the Archetypes ImageBuilder.
  [mathias.leimgruber]


1.3.0 (2014-03-25)
------------------

- Implement ATImage builder.
  [jone]

- Reindex object security after setting local roles for a principal.
  [mathias.leimgruber]

- Support "on" keyword argument for with_roles method in group builder.
  [mathias.leimgruber]


1.2.0 (2014-01-31)
------------------

- Add `providing()` method to Plone builder,
  letting the object provide interfaces.
  [jone]

- Don't use IDNormalizer for Mail. It handles Umlauts weird.
  [tschanzt]


1.1.0 (2013-09-13)
------------------

- Add groups builder.
  [jone]

- Add users builder.
  [jone]

- Added modification date setter for PloneObject Builders.
  [phgross]


1.0.0 (2013-08-12)
------------------

- Added dexterity support.
  [phgross]

- Initial implementation
  [jone]